force-app/main/default/objects/Research_Output__c/fields/I_RS_Affiliation_Statement_Available__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Affiliation_Statement_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliation Statement Available</label>
    <type>Checkbox</type>
</CustomField>