force-app/main/default/objects/Research_Output__c/fields/I_RS_ATSI_research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ATSI_research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATSI research</label>
    <type>Checkbox</type>
</CustomField>