force-app/main/default/objects/Research_Output__c/fields/I_RS_Clickable_DOI__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Clickable_DOI__c</fullName>
    <formula>HYPERLINK(&quot;http://doi.org/&quot;&amp;I_RS_DOI__c, I_RS_DOI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOI</label>
    <type>Text</type>
</CustomField>