force-app/main/default/objects/Research_Output__c/fields/I_RS_Commissining_Body__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Commissining_Body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioning Body</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Research Outputs</relationshipLabel>
    <relationshipName>Research_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>