force-app/main/default/objects/Research_Output__c/fields/I_RS_Conference__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Conference_Journal__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Conference</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Conference_Journal__c</referenceTo>
    <relationshipLabel>Research Outputs</relationshipLabel>
    <relationshipName>Research_Output_Conferences</relationshipName>
    <type>Lookup</type>
</CustomField>