force-app/main/default/objects/Research_Output__c/fields/I_RS_Confidential__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>