force-app/main/default/objects/Research_Output__c/fields/I_RS_Count_of_Citation_Records__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Citation_Records__c</fullName>
    <label>Count of Citation Records</label>
    <summaryFilterItems>
        <field>Metrics__c.I_RS_Type__c</field>
        <operation>equals</operation>
        <value>Citation Count</value>
    </summaryFilterItems>
    <summaryForeignKey>Metrics__c.I_RS_Research_Output__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>