force-app/main/default/objects/Research_Output__c/fields/I_RS_Country_Registered__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Country_Registered__c</fullName>
    <label>Country Registered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>