force-app/main/default/objects/Research_Output__c/fields/I_RS_Curated_Exhibition_OR_Event_Sub_Cat__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Curated_Exhibition_OR_Event_Sub_Cat__c</fullName>
    <label>Curated Exhibition or Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web based exhibition</fullName>
                <label>1.Web-based exhibition work</label>
            </value>
            <value>
                <fullName>Exhibition in a gallery or museum, or public event</fullName>
                <label>2.Exhibition/event</label>
            </value>
            <value>
                <fullName>Festival</fullName>
                <label>3.Festival</label>
            </value>
            <value>
                <fullName>Other exhibition or event</fullName>
                <label>4.Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>