force-app/main/default/objects/Research_Output__c/fields/I_RS_Document_path_dark_copy__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Document_path_dark_copy__c</fullName>
    <label>Document path – dark copy</label>
    <type>Url</type>
</CustomField>