force-app/main/default/objects/Research_Output__c/fields/I_RS_Document_Path_Figshare__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Document_Path_Figshare__c</fullName>
    <label>Repository Link</label>
    <type>Url</type>
</CustomField>