force-app/main/default/objects/Research_Output__c/fields/I_RS_DOI__c.field-meta.xml
<CustomField>
    <fullName>I_RS_DOI__c</fullName>
    <label>DOI</label>
    <type>Url</type>
</CustomField>