force-app/main/default/objects/Research_Output__c/fields/I_RS_Editors__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Editors__c</fullName>
    <label>Editors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>