force-app/main/default/objects/Research_Output__c/fields/I_RS_Family_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Family_Name__c</fullName>
    <label>Family Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>