force-app/main/default/objects/Research_Output__c/fields/I_RS_FOR_Code_World_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>I_RS_FOR_Code_World_Benchmark__c</fullName>
    <label>FOR Code World Benchmark</label>
    <summarizedField>Research_Output_Classification_Code__c.I_RS_World_Benchmark__c</summarizedField>
    <summaryFilterItems>
        <field>Research_Output_Classification_Code__c.I_RS_Inactive_for_Non_Admins__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Research_Output_Classification_Code__c.I_RS_Research_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>