force-app/main/default/objects/Research_Output__c/fields/I_RS_Funding_Acknowledgements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Acknowledgements__c</fullName>
    <label>Funding Acknowledgements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>