force-app/main/default/objects/Research_Output__c/fields/I_RS_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ISBN_13__c</fullName>
    <externalId>true</externalId>
    <label>ISBN-13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>