force-app/main/default/objects/Research_Output__c/fields/I_RS_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Issue_Number__c</fullName>
    <label>Issue Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>