force-app/main/default/objects/Research_Output__c/fields/I_RS_Journal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Conference_Journal__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Journal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Conference_Journal__c</referenceTo>
    <relationshipLabel>Research Outputs (Journal)</relationshipLabel>
    <relationshipName>Research_Output_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>