force-app/main/default/objects/Research_Output__c/fields/I_RS_Language__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal English, so described</fullName>
            </value>
            <value>
                <fullName>Acehnese</fullName>
            </value>
            <value>
                <fullName>Acholi</fullName>
            </value>
            <value>
                <fullName>Adnymathanha</fullName>
            </value>
            <value>
                <fullName>African Languages</fullName>
            </value>
            <value>
                <fullName>Afrikaans</fullName>
            </value>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Alawa</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Alngith</fullName>
            </value>
            <value>
                <fullName>Alyawarr</fullName>
            </value>
            <value>
                <fullName>American Languages</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Amurdak</fullName>
            </value>
            <value>
                <fullName>Anindilyakwa</fullName>
            </value>
            <value>
                <fullName>Anmatyerr</fullName>
            </value>
            <value>
                <fullName>Antekerrepenh</fullName>
            </value>
            <value>
                <fullName>Antikarinya</fullName>
            </value>
            <value>
                <fullName>Anuak</fullName>
            </value>
            <value>
                <fullName>Arabana</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Arandic</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Arnhem Land and Daly River Region Languages</fullName>
            </value>
            <value>
                <fullName>Aromunian (Macedo-Romanian)</fullName>
            </value>
            <value>
                <fullName>Arrernte</fullName>
            </value>
            <value>
                <fullName>Assamese</fullName>
            </value>
            <value>
                <fullName>Assyrian Neo-Aramaic</fullName>
            </value>
            <value>
                <fullName>Auslan</fullName>
            </value>
            <value>
                <fullName>Azeri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>