force-app/main/default/objects/Research_Output__c/fields/I_RS_Live_Perf_Creative_Works_Sub_Cat__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Live_Perf_Creative_Works_Sub_Cat__c</fullName>
    <label>Live Performance - Creative Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Music (live performance)</fullName>
                <label>1. Music</label>
            </value>
            <value>
                <fullName>Play (live performance)</fullName>
                <label>2. Play</label>
            </value>
            <value>
                <fullName>Dance (live performance)</fullName>
                <label>3. Dance</label>
            </value>
            <value>
                <fullName>Other live performance of creative work</fullName>
                <label>4. Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>