force-app/main/default/objects/Research_Output__c/fields/I_RS_Nominated_Peer_for_review__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Nominated_Peer_for_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nominated Peer for review</label>
    <type>Checkbox</type>
</CustomField>