force-app/main/default/objects/Research_Output__c/fields/I_RS_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Notes__c</fullName>
    <inlineHelpText>Add notes for a book or dimensions for a creative work</inlineHelpText>
    <label>Notes/Dimensions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>