force-app/main/default/objects/Research_Output__c/fields/I_RS_Number_of_Citations__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Citations__c</fullName>
    <label>Number of Citations</label>
    <summarizedField>Metrics__c.I_RS_Value_Numeric__c</summarizedField>
    <summaryFilterItems>
        <field>Metrics__c.I_RS_Type__c</field>
        <operation>equals</operation>
        <value>Citation Count</value>
    </summaryFilterItems>
    <summaryForeignKey>Metrics__c.I_RS_Research_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>