force-app/main/default/objects/Research_Output__c/fields/I_RS_Number_Of_Pieces__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_Of_Pieces__c</fullName>
    <label>Number Of Pieces/Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>