force-app/main/default/objects/Research_Output__c/fields/I_RS_Number_of_Report_Submissions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Report_Submissions__c</fullName>
    <label>Number of Report Submissions</label>
    <summaryForeignKey>Report_Submission__c.I_RS_Research_Output__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>