force-app/main/default/objects/Research_Output__c/fields/I_RS_Open_Access__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Open_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Access</label>
    <type>Checkbox</type>
</CustomField>