force-app/main/default/objects/Research_Output__c/fields/I_RS_Original_creative_works_Sub_Cat__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Original_creative_works_Sub_Cat__c</fullName>
    <label>Original Creative Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visual art work</fullName>
                <label>1. Visual art work</label>
            </value>
            <value>
                <fullName>Design/architectural work</fullName>
                <label>2. Design / Architectural work</label>
            </value>
            <value>
                <fullName>Textual creative work</fullName>
                <label>3. Textual work</label>
            </value>
            <value>
                <fullName>Other creative work (including scholarly editions and scholarly translations)</fullName>
                <label>4. Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>