force-app/main/default/objects/Research_Output__c/fields/I_RS_Owned_by_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Owned_by_La_Trobe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owned by La Trobe</label>
    <type>Checkbox</type>
</CustomField>