force-app/main/default/objects/Research_Output__c/fields/I_RS_Pagination_Count__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Pagination_Count__c</fullName>
    <label>Pagination Count</label>
    <length>18</length>
    <type>Text</type>
</CustomField>