force-app/main/default/objects/Research_Output__c/fields/I_RS_Place_of_Conference__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Place_of_Conference__c</fullName>
    <description>https://eawebdev.atlassian.net/browse/T2-990</description>
    <label>Place of Conference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>