force-app/main/default/objects/Research_Output__c/fields/I_RS_Publication_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publication_date__c</fullName>
    <label>Publication date</label>
    <type>Date</type>
</CustomField>