force-app/main/default/objects/Research_Output__c/fields/I_RS_Publication_reporting_category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publication_reporting_category__c</fullName>
    <label>Publication reporting category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1 - Books - Authored research</fullName>
            </value>
            <value>
                <fullName>A2 - Books - Authored other</fullName>
            </value>
            <value>
                <fullName>A3 - Books - Edited</fullName>
            </value>
            <value>
                <fullName>A4 - Books - Revision/New Edition</fullName>
            </value>
            <value>
                <fullName>B - Book Chapter</fullName>
            </value>
            <value>
                <fullName>BB - Non-DEST book chapter</fullName>
            </value>
            <value>
                <fullName>C1 - Journal Articles</fullName>
            </value>
            <value>
                <fullName>C2 - Journal Articles - Other refereed contribution to a Scholarly Journal</fullName>
            </value>
            <value>
                <fullName>C3 - Journal Articles - Non Refereed Article</fullName>
            </value>
            <value>
                <fullName>C4 - Journal Articles - Letter or Note</fullName>
            </value>
            <value>
                <fullName>E1 - Conference Publication</fullName>
            </value>
            <value>
                <fullName>E2 - Conference - Full paper, non refereed</fullName>
            </value>
            <value>
                <fullName>E3 - Conference Publication - Extract of Paper</fullName>
            </value>
            <value>
                <fullName>E4 - Edited volume of conference proceedings</fullName>
            </value>
            <value>
                <fullName>I - Patent</fullName>
            </value>
            <value>
                <fullName>J1 - Original Creative Work</fullName>
            </value>
            <value>
                <fullName>J3 - Live Performance</fullName>
            </value>
            <value>
                <fullName>J4 - Recorded or Rendered Creative Work</fullName>
            </value>
            <value>
                <fullName>J5 - Curated Exhibition or Event</fullName>
            </value>
            <value>
                <fullName>J6- Research Report for an External Body</fullName>
            </value>
            <value>
                <fullName>M - Research Report or Pamphlet</fullName>
            </value>
            <value>
                <fullName>Commercialisation Income</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Portfolio - J1 -Original Creative Work</fullName>
            </value>
            <value>
                <fullName>Portfolio - J3 -Live Performance</fullName>
            </value>
            <value>
                <fullName>Portfolio - J4 - Recorded or Rendered Creative Work</fullName>
            </value>
            <value>
                <fullName>Portfolio - J5 - Curated Exhibition or Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>