force-app/main/default/objects/Research_Output__c/fields/I_RS_PublicationsLink__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PublicationsLink__c</fullName>
    <description>Publications Link</description>
    <formula>HYPERLINK($Setup.Symplectic_Url__c.Symplectic_Url_Front__c &amp;Name &amp;$Setup.Symplectic_Url__c.Symplectic_URL_Back__c ,&quot;Publications Link&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Publications Link</inlineHelpText>
    <label>PublicationsLink</label>
    <type>Text</type>
</CustomField>