force-app/main/default/objects/Research_Output__c/fields/I_RS_Publisher__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher or Gallery</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Research Outputs (Publisher)</relationshipLabel>
    <relationshipName>Research_Outputs1</relationshipName>
    <type>Lookup</type>
</CustomField>