force-app/main/default/objects/Research_Output__c/fields/I_RS_RCI__c.field-meta.xml
<CustomField>
    <fullName>I_RS_RCI__c</fullName>
    <formula>IF(I_RS_Number_of_Citations__c &gt; 0 &amp;&amp;  RecordType.DeveloperName = &apos;I_RS_Journal_Article_5&apos; &amp;&amp; I_RS_FOR_Code_World_Benchmark__c &gt; 0,

I_RS_Number_of_Citations__c / I_RS_FOR_Code_World_Benchmark__c,
 
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCI</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>