force-app/main/default/objects/Research_Output__c/fields/I_RS_Recorded_or_rendered_works_Sub_Cat__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Recorded_or_rendered_works_Sub_Cat__c</fullName>
    <label>Recorded or Rendered Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Film, video</fullName>
                <label>1. Film, video</label>
            </value>
            <value>
                <fullName>Performance</fullName>
                <label>2. Performance</label>
            </value>
            <value>
                <fullName>Inter-arts</fullName>
                <label>3. Inter-arts</label>
            </value>
            <value>
                <fullName>Digital creative work</fullName>
                <label>4. Digital creative work</label>
            </value>
            <value>
                <fullName>Website/web exhibition</fullName>
                <label>5. Website/ web exhibition</label>
            </value>
            <value>
                <fullName>Other recorded/rendered creative work</fullName>
                <label>6. Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>