force-app/main/default/objects/Research_Output__c/fields/I_RS_Registry__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Registry__c</fullName>
    <label>Registry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>