force-app/main/default/objects/Research_Output__c/fields/I_RS_Research_Output_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output_ID__c</fullName>
    <displayFormat>RO-{0000000}</displayFormat>
    <label>Research Output ID</label>
    <type>AutoNumber</type>
</CustomField>