force-app/main/default/objects/Research_Output__c/fields/I_RS_Research_Output_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output_Status__c</fullName>
    <label>Research Output Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In preparation</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Published online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>