force-app/main/default/objects/Research_Output__c/fields/I_RS_Research_Report_Ext_Body_Sub_Cat__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Report_Ext_Body_Sub_Cat__c</fullName>
    <label>Research Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public sector research report</fullName>
                <label>1. Public sector</label>
            </value>
            <value>
                <fullName>Industry research report</fullName>
                <label>2. Industry</label>
            </value>
            <value>
                <fullName>Not-for-profit research report</fullName>
                <label>3. Not for profit</label>
            </value>
            <value>
                <fullName>Other research report</fullName>
                <label>4. Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>