force-app/main/default/objects/Research_Output__c/fields/I_RS_RO_ERA_Eligible__c.field-meta.xml
<CustomField>
    <fullName>I_RS_RO_ERA_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RO ERA Eligible</label>
    <type>Checkbox</type>
</CustomField>