force-app/main/default/objects/Research_Output__c/fields/I_RS_Roman_Script__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Roman_Script__c</fullName>
    <label>Roman Script</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>