force-app/main/default/objects/Research_Output__c/fields/I_RS_Sensitive_Handling_Note__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sensitive_Handling_Note__c</fullName>
    <label>Sensitive Handling Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>