force-app/main/default/objects/Research_Output__c/fields/I_RS_Series__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Series__c</fullName>
    <label>Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>